--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
   </head>
 
   <body class="overflow-x-hidden">
-    <!-- nav -->
     <nav
       class="sticky top-0 isolate z-[1] flex h-[72px] items-center justify-between bg-white px-4 py-6 shadow-md lg:px-20">
       <span class="text-2xl"><span class="font-black">giard</span>design</span>
       <ul class="hidden items-center gap-12 lg:flex">
         <li class="group relative flex gap-1">
           <button
-            class="group group flex items-center gap-1 text-gray-900 after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-black after:transition-all after:duration-500 hover:after:w-full">
+            class="group group flex items-center gap-1 text-gray-900 after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-black after:transition-all after:duration-1000 hover:after:w-full">
             <span id="offer-dropdown-button">Oferta</span>
             <svg id="offer-dropdown-button" class="h-4 w-4" xmlns="http://www.w3.org/2000/svg" fill="none"
               viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-6 w-6">
@@ -42,20 +41,20 @@
           </button>
         </li>
         <li
-          class="relative after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-gray-900 after:transition-all after:duration-500 hover:after:w-full">
+          class="relative after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-gray-900 after:transition-all after:duration-1000 hover:after:w-full">
           <a href="#" class="text-gray-900">O firmie</a>
         </li>
         <li
-          class="relative after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-gray-900 after:transition-all after:duration-500 hover:after:w-full">
+          class="relative after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-gray-900 after:transition-all after:duration-1000 hover:after:w-full">
           <a href="#" class="text-gray-900">Realizacje</a>
         </li>
         <li
-          class="relative after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-gray-900 after:transition-all after:duration-500 hover:after:w-full">
+          class="relative after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-gray-900 after:transition-all after:duration-1000 hover:after:w-full">
           <a href="#" class="text-gray-900">Kontakt</a>
         </li>
         <li class="relative mx-auto w-max">
           <input type="search" id="search-input" placeholder=""
-            class="relative z-10 h-12 w-12 cursor-pointer rounded-full border bg-transparent outline-none transition-[width] duration-500 ease-in-out focus:w-48 focus:pl-12 focus:transition-[width] focus:duration-500 focus:ease-in-out [&:not(:placeholder-shown)]:w-48 [&:not(:placeholder-shown)]:pl-12" />
+            class="relative z-10 h-12 w-12 cursor-pointer rounded-full border bg-transparent outline-none transition-[width] duration-1000 ease-in-out focus:w-48 focus:pl-12 focus:transition-[width] focus:duration-1000 focus:ease-in-out [&:not(:placeholder-shown)]:w-48 [&:not(:placeholder-shown)]:pl-12" />
           <svg class="absolute top-0 h-6 w-6 translate-x-1/2 translate-y-1/2 stroke-gray-500"
             xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
             class="h-6 w-6">
@@ -66,7 +65,6 @@
       </ul>
     </nav>
 
-    <!-- main -->
     <main class="isolate flex h-[calc(100vh-72px)] w-full items-center">
       <section class="relative flex h-full w-full flex-col justify-center bg-[#DCC1AB] px-4 py-16 lg:w-1/2 lg:px-20">
         <h1 class="animate__animated animate__fadeInLeft mb-12 text-5xl font-medium lg:text-6xl">
@@ -139,7 +137,7 @@
       </div>
       <div class="grid gap-8 lg:grid-flow-col">
         <div
-          class="grid cursor-pointer rounded-xl bg-white p-8 transition-all duration-500 ease-in-out hover:shadow-lg">
+          class="grid cursor-pointer rounded-xl bg-white p-8 transition-all duration-1000 ease-in-out hover:scale-105 hover:shadow-lg">
           <svg class="mb-8 h-12 w-12" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
             stroke-width="1.5" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round"
@@ -151,7 +149,7 @@
             wykorzystaniem istniejącej przestrzeni.
           </p>
           <a href="#"
-            class="relative inline-flex w-fit items-center gap-2 self-end text-[#1B5B31] after:absolute after:-bottom-2 after:left-0 after:h-[0.0625rem] after:w-0 after:bg-[#1B5B31] after:transition-all after:duration-500 hover:after:w-full">
+            class="relative inline-flex w-fit items-center gap-2 self-end text-[#1B5B31] after:absolute after:-bottom-2 after:left-0 after:h-[0.0625rem] after:w-0 after:bg-[#1B5B31] after:transition-all after:duration-1000 hover:after:w-full">
             Dowiedz się więcej
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
               stroke="currentColor" class="h-4 w-4">
@@ -160,7 +158,7 @@
           </a>
         </div>
         <div
-          class="grid cursor-pointer rounded-xl bg-white p-8 transition-all duration-500 ease-in-out hover:shadow-lg">
+          class="grid cursor-pointer rounded-xl bg-white p-8 transition-all duration-1000 ease-in-out hover:scale-105 hover:shadow-lg">
           <svg class="mb-8 h-12 w-12" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
             stroke-width="1.5" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round"
@@ -173,7 +171,7 @@
             animowanego w technologii 3D.
           </p>
           <a href="#"
-            class="relative inline-flex w-fit items-center gap-2 self-end text-[#1B5B31] after:absolute after:-bottom-2 after:left-0 after:h-[0.0625rem] after:w-0 after:bg-[#1B5B31] after:transition-all after:duration-500 hover:after:w-full">
+            class="relative inline-flex w-fit items-center gap-2 self-end text-[#1B5B31] after:absolute after:-bottom-2 after:left-0 after:h-[0.0625rem] after:w-0 after:bg-[#1B5B31] after:transition-all after:duration-1000 hover:after:w-full">
             Dowiedz się więcej
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
               stroke="currentColor" class="h-4 w-4">
@@ -182,7 +180,7 @@
           </a>
         </div>
         <div
-          class="grid cursor-pointer rounded-xl bg-white p-8 transition-all duration-500 ease-in-out hover:shadow-lg">
+          class="grid cursor-pointer rounded-xl bg-white p-8 transition-all duration-1000 ease-in-out hover:scale-105 hover:shadow-lg">
           <svg class="mb-8 h-12 w-12" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
             stroke-width="1.5" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round"
@@ -194,7 +192,7 @@
             zaawansowanych technologii.
           </p>
           <a href="#"
-            class="relative inline-flex w-fit items-center gap-2 self-end text-[#1B5B31] after:absolute after:-bottom-2 after:left-0 after:h-[0.0625rem] after:w-0 after:bg-[#1B5B31] after:transition-all after:duration-500 hover:after:w-full">
+            class="relative inline-flex w-fit items-center gap-2 self-end text-[#1B5B31] after:absolute after:-bottom-2 after:left-0 after:h-[0.0625rem] after:w-0 after:bg-[#1B5B31] after:transition-all after:duration-1000 hover:after:w-full">
             Dowiedz się więcej
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
               stroke="currentColor" class="h-4 w-4">
@@ -253,40 +251,67 @@
       </div>
       <div class="grid grid-flow-dense grid-cols-1 gap-1 lg:grid-cols-3">
         <div
-          class="group relative flex cursor-pointer items-center justify-center transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
-          <img src="https://picsum.photos/600/600?random=0" class="h-full" />
+          id="photo-100-clickable"
+          class="group relative flex w-auto cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:transition-transform hover:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
+          <img src="https://picsum.photos/600/600?random=0"
+            class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000"
+            id="photo-10" />
         </div>
         <div
-          class="group relative row-span-2 flex cursor-pointer items-center justify-center transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
-          <img src=" https://picsum.photos/600/600?random=1" class="h-full" />
+          id="photo-101-clickable"
+          class="group relative row-span-2 flex cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
+          <img src="https://picsum.photos/600/600?random=1"
+            class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000"
+            id="photo-11" />
         </div>
         <div
-          class="group relative row-span-2 flex cursor-pointer items-center justify-center transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
-          <img src=" https://picsum.photos/600/600?random=2" class="h-full" />
+          id="photo-102-clickable"
+          class="group relative row-span-2 flex cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
+          <img src="https://picsum.photos/600/600?random=2"
+            class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000"
+            id="photo-12" />
         </div>
         <div
-          class="group relative t after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
-          <img src=" https://picsum.photos/600/600?random=3" class="h-full" />
+          id="photo-103-clickable"
+          class="group relative flex cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
+          <img src="https://picsum.photos/600/600?random=3"
+            class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000"
+            id="photo-13" />
         </div>
         <div
-          class="group relative flex cursor-pointer items-center justify-center transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
-          <img src="https://picsum.photos/600/600?random=4" class="h-full" />
+          id="photo-104-clickable"
+          class="group relative flex cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
+          <img src="https://picsum.photos/600/600?random=4"
+            class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000"
+            id="photo-14" />
         </div>
         <div
-          class="group relative flex cursor-pointer items-center justify-center transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
-          <img src=" https://picsum.photos/600/600?random=5" class="h-full" />
+          id="photo-105-clickable"
+          class="group relative flex cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
+          <img src="https://picsum.photos/600/600?random=5"
+            class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000"
+            id="photo-15" />
         </div>
         <div
-          class="group relative row-span-2 flex cursor-pointer items-center justify-center transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
-          <img src="https://picsum.photos/600/600?random=6" class="h-full" />
+          id="photo-106-clickable"
+          class="group relative row-span-2 flex cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
+          <img src="https://picsum.photos/600/600?random=6"
+            class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000"
+            id="photo-16" />
         </div>
         <div
-          class="group relative flex cursor-pointer items-center justify-center transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
-          <img src=" https://picsum.photos/600/600?random=7" class="h-full" />
+          id="photo-107-clickable"
+          class="group relative flex cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
+          <img src="https://picsum.photos/600/600?random=7"
+            class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000"
+            id="photo-17" />
         </div>
         <div
-          class="group relative row-span-2 flex cursor-pointer items-center justify-center transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
-          <img src=" https://picsum.photos/600/600?random=8" class="h-full" />
+          id="photo-108-clickable"
+          class="group relative row-span-2 flex cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
+          <img src="https://picsum.photos/600/600?random=8"
+            class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000"
+            id="photo-18" />
         </div>
       </div>
     </section>
@@ -396,14 +421,26 @@
       </ul>
     </footer>
 
-    <!-- <dialog open class="absolute top-48 w-screen h-full bg-transparent backdrop:bg-black">
+    <dialog id="photos-dialog" class="absolute top-48 w-screen h-full bg-transparent backdrop:bg-black">
       <div class="relative hidden h-full w-1/2 bg-transparent lg:block translate-x-1/2 overflow-hidden">
         <img src="https://picsum.photos/600/600?random=0"
-          class="absolute h-full w-full transition-transform duration-1000" id="photo-9" />
+          class="absolute h-full w-full transition-transform duration-1000" id="photo-100" />
         <img src="https://picsum.photos/600/600?random=1"
-          class="absolute h-full w-full transition-transform duration-1000" id="photo-10" />
+          class="absolute h-full w-full transition-transform duration-1000" id="photo-101" />
         <img src="https://picsum.photos/600/600?random=2"
-          class="absolute h-full w-full transition-transform duration-1000" id="photo-11" />
+          class="absolute h-full w-full transition-transform duration-1000" id="photo-102" />
+        <img src="https://picsum.photos/600/600?random=3"
+          class="absolute h-full w-full transition-transform duration-1000" id="photo-103" />
+        <img src="https://picsum.photos/600/600?random=4"
+          class="absolute h-full w-full transition-transform duration-1000" id="photo-104" />
+        <img src="https://picsum.photos/600/600?random=5"
+          class="absolute h-full w-full transition-transform duration-1000" id="photo-105" />
+        <img src="https://picsum.photos/600/600?random=6"
+          class="absolute h-full w-full transition-transform duration-1000" id="photo-106" />
+        <img src="https://picsum.photos/600/600?random=7"
+          class="absolute h-full w-full transition-transform duration-1000" id="photo-107" />
+        <img src="https://picsum.photos/600/600?random=8"
+          class="absolute h-full w-full transition-transform duration-1000" id="photo-108" />
 
         <div class="absolute w-full h-full">
           <button class="absolute p-4 top-1/2 bg-[#F5F0EC]" id="photo-previous2">
@@ -420,7 +457,7 @@
           </button>
         </div>
       </div>
-    </dialog> -->
+    </dialog>
   </body>
 
 </html>
